# axum-htmx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  rustfmt.toml
.github/workflows/: ci.yml
axum-htmx-derive/: Cargo.toml  README.md
axum-htmx-derive/src/: lib.rs
axum-htmx-derive/src/boosted_by/: boosted_by.rs  mod.rs  tests.rs
docs/: LICENSE-MIT
examples/: auto-vary.rs
src/: auto_vary.rs  error.rs  extractors.rs  guard.rs  headers.rs  lib.rs  request.rs  responders.rs  response.rs  vary_middleware.rs
src/responders/: location.rs  serde.rs  trigger.rs  vary.rs
