[package]
name = "axum-htmx"
authors = ["Rob Wagner <rob@sombia.com>"]
license = "MIT OR Apache-2.0"
description = "A set of htmx extractors, responders, and request guards for axum."
repository = "https://github.com/robertwayne/axum-htmx"
categories = ["web-programming"]
keywords = ["axum", "htmx"]
readme = "README.md"
version = "0.6.0"
edition = "2021"

[features]
default = []
unstable = []
guards = ["tower", "futures-core", "pin-project-lite"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
axum-core = "0.4"
http = { version = "1.0", default-features = false }
async-trait = "0.1"
axum = "0.7"                                         # TODO: remove
tokio = { version = "1", features = ["sync"] }       # TODO: hide behind a feature?

# Optional dependencies required for the `guards` feature.
tower = { version = "0.4", default-features = false, optional = true }
futures-core = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }

# Optional dependencies required for the `serde` feature.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
axum = { version = "0.7", default-features = false }
axum-test = "14"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
