[package]
name = "axum-htmx"
authors = ["Rob Wagner <rob@sombia.com>"]
license = "MIT OR Apache-2.0"
description = "A set of htmx extractors, responders, and request guards for axum."
repository = "https://github.com/robertwayne/axum-htmx"
categories = ["web-programming"]
keywords = ["axum", "htmx"]
readme = "README.md"
version = "0.7.0"
edition = "2021"

[features]
default = []
unstable = []
guards = ["tower", "futures-core", "pin-project-lite"]
serde = ["dep:serde", "dep:serde_json"]
auto-vary = ["futures", "tokio", "tower"]

[dependencies]
axum-core = "0.5"
http = { version = "1", default-features = false }

# Optional dependencies required for the `guards` feature.
tower = { version = "0.5", default-features = false, optional = true }
futures-core = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }

# Optional dependencies required for the `serde` feature.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

# Optional dependencies required for the `auto-vary` feature.
tokio = { version = "1", features = ["sync"], optional = true }
futures = { version = "0.3", default-features = false, features = [
    "alloc",
], optional = true }

[dev-dependencies]
axum = { version = "0.8", default-features = false }
axum-test = "17"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
